--- a/README.org
+++ b/README.org
@@ -56,7 +56,7 @@ we will do a vector addition of 8192 elements, the threshold to decide whether
 to compute or to divide into smaller tasks is 128.
 
 #+begin_src sh
-./bin/vectoradd-constellation.local -n 8192 -divideComputeThreshold=128
+./bin/vectoradd-constellation.local -n 8192 -computeDivideThreshold 128
 #+end_src
 
 
@@ -82,6 +82,6 @@ to compute or to divide into smaller tasks is 128, and we will run it on 2
 regular nodes in the DAS-5 cluster.
 
 #+begin_src sh
-./bin/vectoradd-constellation -n 8192 -divideComputeThreshold=128 regular=2
+./bin/vectoradd-constellation -n 8192 -computeDivideThreshold 128 regular=2
 #+end_src
 
